--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,12 @@ trigger:
 - main
 
 pool:
-  vmImage: ubuntu-latest
+  name: Default
+  demands:
+    - Agent.Name -equals vmlsha1
+
+resources:
+  - repo: self
 
 variables:
   - name: appName
@@ -18,15 +23,13 @@ variables:
     value: 'PHP|8.1'
   - name: azureSubscription
     value: 'svc-con-awh-01'
+  - name: zipDistribution
+    value: 'https://download.moodle.org/download.php/stable401/moodle-4.1.2.zip'
 
 steps:
   - script: |
       echo Downloading Moodle to "$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip"
-      curl -o "$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip" \
-        https://download.moodle.org/download.php/stable401/moodle-4.1.2.zip
-      cd $(Build.ArtifactStagingDirectory)
-      mkdir ../s/release/
-      cp $(Build.BuildId).zip ../s/release/
+      curl -o "$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip" "$(zipDistribution)"
     displayName: Get Moodle Release and place in artefact staging directory
 
   - task: AzureRmWebAppDeployment@4
@@ -39,13 +42,11 @@ steps:
       deployToSlotOrASE: true
       SlotName: 'production'
       RuntimeStack: '$(runtimeStack)'
-      packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
-      #StartupCommand: ''
+      packageForLinux: '$(Build.ArtifactStagingDirectory)/*.zip'
       ScriptType: 'Inline Script'
       InlineScript: |
         echo "Working directory is $(pwd)"
         export WORKDIR=$(pwd)
         echo "php is $(which php)"
-        echo "\$PYTHONPATH is $PYTHONPATH"
         echo "\$PATH is $PATH"
 
