--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,17 +34,41 @@ steps:
 # See https://docs.moodle.org/401/en/Installing_Moodle#Download_and_copy_files_into_place
 # Alternate git download: `git clone -b MOODLE_{{Version3}}_STABLE git://git.moodle.org/moodle.git`
   - script: |
+      set -e
+      
       echo Downloading Moodle to "$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip"
-      curl -L -o "$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip" "$(zipDistribution)"
+      curl -L -o moodle.zip "$(zipDistribution)"
+      unzip moodle.zip
+      cd moodle
+      
+      mv config-dist.php config.php
+    
+      # Update moodle config file
+      sed -i '/$CFG->reverseproxy/s/^\/\/[ ]*//g' config.php
+      sed -i -E "/$CFG->dbhost\s*= '[a-z]+';/s/localhost/${DB_HOST}/" config.php
+      sed -i -E "/$CFG->dbname\s*= '[a-z]+';/s/moodle/${DB_NAME}/" config.php
+      sed -i -E "/$CFG->dbuser\s*= '[a-z]+';/s/username/${DB_USER}/" config.php
+      sed -i -E "/$CFG->dbpass\s*= '[a-z]+';/s/password/${DB_PASS}/" config.php
+    
+      # Test that configuration has been updated
+      cat config.php | grep 'CFG\->reverseproxy'
+      cat config.php | grep 'CFG\->dbhost'
+      cat config.php | grep 'CFG\->dbname'
+      cat config.php | grep 'CFG\->dbuser'
+      cat config.php | grep 'CFG\->dbpass' | sed "s/${DB_PASS}/*******/"
+      
+      # Create our build artefact
+      zip -0 -r "$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip" *
       unzip -qt "$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip"
-    displayName: Get Moodle Release and place in artefact staging directory
 
-  - task: AzureRmWebAppDeployment@4
-    env:
+    displayName: Get Moodle Release and place in artefact staging directory
+    variables:
       DB_HOST: $(DB_HOST)
       DB_NAME: $(DB_NAME)
       DB_USER: $(DB_USER)
       DB_PASS: $(DB_PASS)
+
+  - task: AzureRmWebAppDeployment@4
     inputs:
       ConnectionType: 'AzureRM'
       appType: 'webAppLinux'
@@ -57,30 +81,12 @@ steps:
       packageForLinux: '$(Build.ArtifactStagingDirectory)/*.zip'
       ScriptType: 'Inline Script'
       InlineScript: |
+        set -e
         export WORKDIR=$(pwd)
         echo "Working directory is ${WORKDIR}"
         echo "I am $(whoami)"
         
-        chown -R $(whoami) $WORKDIR
-        chmod -R 0755 $WORKDIR
-        
-        mv moodle/* .
-        rmdir moodle
-        mv config-dist.php config.php
-        
-        # Update moodle config file
-        sed -i '/$CFG->reverseproxy/s/^\/\/[ ]*//g' config.php
-        sed -i -E "/$CFG->dbhost\s*= '[a-z]+';/s/localhost/${DB_HOST}/" config.php
-        sed -i -E "/$CFG->dbname\s*= '[a-z]+';/s/moodle/${DB_NAME}/" config.php
-        sed -i -E "/$CFG->dbuser\s*= '[a-z]+';/s/username/${DB_USER}/" config.php
-        sed -i -E "/$CFG->dbpass\s*= '[a-z]+';/s/password/${DB_PASS}/" config.php
-        
-        # Test that configuration has been updated
-        cat config.php | grep 'CFG\->reverseproxy'
-        cat config.php | grep 'CFG\->dbhost'
-        cat config.php | grep 'CFG\->dbname'
-        cat config.php | grep 'CFG\->dbuser'
-        cat config.php | grep 'CFG\->dbpass' | sed "s/${DB_PASS}/*******/"
+        ls -lA
         
         # Set directory read-only for www-data user
         chown -R root $WORKDIR/*
