--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,6 +51,7 @@ steps:
       sed -i -E "/$CFG->dbuser\s*= '[a-z]+';/s/username/${DB_USER}/" config.php
       sed -i -E "/$CFG->dbpass\s*= '[a-z]+';/s/password/${DB_PASS}/" config.php
       sed -i -E "/$CFG->dataroot\s*= '.+';/s/\/home\/example\/moodledata/${DATA_ROOT}/" config.php
+      sed -i -E "/$CFG->wwwroot\s*= '.+';/s/http:\/\/example.com\/moodle/${WWW_ROOT}/" config.php
     
       cat config.php | grep '^\$CFG\->reverseproxy'
       cat config.php | grep '^\$CFG\->dbhost'
@@ -58,6 +59,7 @@ steps:
       cat config.php | grep '^\$CFG\->dbuser'
       cat config.php | grep '^\$CFG\->dbpass' | sed "s/${DB_PASS}/*******/"
       cat config.php | grep '^\$CFG\->dataroot'
+      cat config.php | grep '^\$CFG\->wwwroot'
 
     displayName: Get Moodle Release and place in artefact staging directory
     env:
@@ -66,6 +68,7 @@ steps:
       DB_USER: $(DB_USER)
       DB_PASS: $(DB_PASS)
       DATA_ROOT: $(DATA_ROOT)
+      WWW_ROOT: $(WWW_ROOT)
 
   - task: ArchiveFiles@2
     inputs:
