/azure-pipelines.yml (Line: 94, Col: 20): Key not found 'webapp_settings'

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -91,7 +91,7 @@ steps:
       RuntimeStack: '$(runtimeStack)'
       packageForLinux: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
       ScriptType: 'Inline Script'
-      AppSettings: '${{ parameters.webapp_settings }} -DATA_ROOT $(DATA_ROOT)'
+      AppSettings: '$(parameters.webapp_settings) -DATA_ROOT $(DATA_ROOT)'
       InlineScript: |
         set -e
         export WORKDIR=$(pwd)
