--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,7 +50,7 @@ jobs:
       rm dist.zip
       
       DIR=$(ls)
-      (cd $(ls); mv * .* ../)
+      (cd $(ls); mv * .* ../) || true
       rmdir $DIR
       
       cp ../*.php .
